# quafu-runtime

./: .gitignore  How-to-use.ipynb  README.md  Test.ipynb  TestJob.ipynb  how-to-use.ipynb  pyproject.toml  quafu_runtime_service.py  requirements.txt  runtime_cli.py  setup.py  simple-client.py  simple-server.py  simpletest.py
clients/: account.py  runtime_client.py  runtime_client_ws.py
examples/: User-Guide.md  how-to-use.ipynb
examples/program_source/: for-while.py  h2_test.py  hello.py  multi-task.py  raise-exception.py
exceptions/: __init__.py  exceptions.py
job/: job.py  jobstatus.py
program/: __init__.py  for-while.py  hello.py  hello2.py  long-run-task.py  program_with_error.py  raise-exception.py
program/userpub/: userpub.py
quafu_runtime/: __init__.py  quafu_runtime_service.py
quafu_runtime/clients/: __init__.py  account.py  runtime_client.py  runtime_client_ws.py
quafu_runtime/job/: __init__.py  decoder.py  job.py  jobstatus.py
quafu_runtime/program/: program.py
quafu_runtime/program/templates/: program_decoder.py  program_template.py  userpub.py
quafu_runtime/rtexceptions/: __init__.py  rtexceptions.py
quafu_runtime/utils/: __init__.py  base.py  check_python.py  jsonutil.py  keywords.py
rtexceptions/: rtexceptions.py
tests/: simpletest.py  test_package.py
utils/: base.py  jsonutil.py
